--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,4 +1,4 @@
 FROM azul/zulu-openjdk-alpine:11
 ARG JAR_FILE=build/libs//*.jar
-COPY ${JAR_FILE} ProjectAuth-1.0-SNAPSHOT.jar
+COPY ${JAR_FILE} auth-1.0-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/auth-1.0-SNAPSHOT.jar"]
